--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "yt-dlp-exec": "^2.1.0"
   }
 }
